--- a/templates/theme/automatix/base.html
+++ b/templates/theme/automatix/base.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Max-Age" content="0">
 		<meta http-equiv="Cache-Control" content="no-cache">
+		<link href="{{STATIC_URL}}css/inettuts.css" rel="stylesheet" type="text/css" />
 		<link rel="stylesheet" type="text/css" media="screen" href="{{STATIC_URL}}css/win.css"/>
 		<link rel="stylesheet" type="text/css" media="screen" href="{{STATIC_URL}}css/layout.css"/>
 		<link href="{{STATIC_URL}}css/default.css" rel="stylesheet" type="text/css"/>
@@ -34,7 +35,8 @@
 					$('#loading').hide()
 				},
 				success : function() {
-				}
+				},
+				timeout: 15000
 			});
 
 			// implement JSON.stringify serialization
@@ -278,5 +280,7 @@
 		</div>
 		<div class="footer"></div>
 		</div>
+		
+    	<script type="text/javascript" src="{{STATIC_URL}}js/inettuts.js"></script>
 	</body>
 </html>
