Added Django Widget Project (modified to get it working) Added initial_data to initialize database Created a first widget example (to complete fixing some problems) Updated README file Created puppetclass django app

--- a/templates/widgets/basecommands.html
+++ b/templates/widgets/basecommands.html
@@ -18,7 +18,7 @@
 								<table cellspacing="0" cellpadding="0" style="margin:0px;border:0px;padding:0px;background-image:none;background-color:transparent;" class="treeCell">
 									<tbody>
 										<tr>
-											<td class="treeCell" style="margin:0px;border:0px;padding:0px;background-image:none;background-color:transparent;"></td><td class="treeCell" style=";margin:0px;border:0px;padding:0px;background-image:none;background-color:transparent;"><img width="16" height="16" border="0" align="absmiddle" suppress="TRUE" name="isc_119icon_0" src="{{STATIC_URL}}images/icons/{{operation.icon}}"></td><td class="treeCell" style=";margin:0px;border:0px;padding:0px;background-image:none;background-color:transparent;padding-left:3px;">
+											<td class="treeCell" style="margin:0px;border:0px;padding:0px;background-image:none;background-color:transparent;"></td><td class="treeCell" style=";margin:0px;border:0px;padding:0px;background-image:none;background-color:transparent;"><img width="16" height="16" border="0" align="absmiddle" suppress="TRUE" name="isc_119icon_0" src="{{settings.STATIC_URL}}images/icons/{{operation.icon}}"></td><td class="treeCell" style=";margin:0px;border:0px;padding:0px;background-image:none;background-color:transparent;padding-left:3px;">
 											<nobr>
 												{{operation.name}}
 											</nobr></td>
