--- a/templates/widgets/serverstatus.html
+++ b/templates/widgets/serverstatus.html
@@ -1,3 +1,10 @@
+<script>
+	$(document).ready(function() {
+		// Updating actual Server Status
+		//callMcollectiveWithTemplateRsp('/restapi/mcollective-template/ping/no-filter/rpcutil/ping/', 'actual-server-status');
+	});
+
+</script>
 <li class="widget color-white">
 	<div class="widget-head">
 		<h3>Server Status</h3>
