--- a/templates/widgets/opresponse.html
+++ b/templates/widgets/opresponse.html
@@ -1,8 +1,5 @@
-<li class="widget color-white">
-	<div class="widget-head">
-		<h3>Operations Response</h3>
-	</div>
-	<div class="widget-content">
-		<div id="response-container"></div>
-	</div>
-</li>
+{% extends "widgets/base_widget.html" %}
+
+{% block widget-content %} 
+<div id="response-container"></div>
+{% endblock %}
