--- a/templates/theme/webui/base.html
+++ b/templates/theme/webui/base.html
@@ -69,6 +69,7 @@
 			};
 
 		</script>
+		{% block extrahead %}{% endblock %}
 	</head>
 	<body>
 		<div id="loading">
@@ -104,7 +105,7 @@
 													<table width="100%" height="100%" cellspacing="0" cellpadding="0">
 														<tbody>
 															<tr>
-																<td valign="center" align="center" class="inheritColor"><a href="#Dashboards" class="menuBar">Dashboard</a></td>
+																<td valign="center" align="center" class="inheritColor"><a href="/" class="menuBar">Dashboard</a></td>
 															</tr>
 														</tbody>
 													</table>
