--- a/templates/widgets/serverstatus.html
+++ b/templates/widgets/serverstatus.html
@@ -47,7 +47,7 @@ background: #F0F0F0
 			{% for server in servers %}
 			<tr class="{% cycle odd,even %}">
 				<td width="60px"><img src="{{settings.STATIC_URL}}images/icons/{% if server.online %}online.png{% else %}offline.png{% endif %}" style="border: 0px; height: 15px;margin: 3px;float:none;"/></td>
-				<td>{{server.hostname}}</td>
+				<td><a href="/server/details/{{server.hostname}}/">{{server.hostname}}</a></td>
 				<td>{{server.os}}</td>
 				<td>{{server.architecture}}</td>
 			</tr>
