Changed Puppet Classes Tree

--- a/templates/theme/webui/base.html
+++ b/templates/theme/webui/base.html
@@ -18,9 +18,16 @@
 		<link type="text/css" href="{{STATIC_URL}}css/jquery-ui-1.8.15.custom.css" rel="stylesheet" />
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-1.8.15.custom.min.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-hotkeys/jquery.hotkeys.js"></script>
-		<script type="text/javascript" src="{{STATIC_URL}}js/jstree/jquery.jstree.js"></script>
+		<!-- DynaTree-->
+		<link href="{{STATIC_URL}}css/dynatree/skin/ui.dynatree.css" rel="stylesheet" type="text/css">
+  		<script src="{{STATIC_URL}}js/dynatree/jquery.dynatree.js" type="text/javascript"></script>
+  		<!-- JQuery Cookie -->
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-cookie/jquery.cookie.js"></script>
 		
+		<!-- JQuery Context Menu-->
+  		<script src="{{STATIC_URL}}js/jquery-context-menu/jquery.contextMenu.js" type="text/javascript"></script>
+  		<link href="{{STATIC_URL}}css/jquery-context-menu/jquery.contextMenu.css" rel="stylesheet" type="text/css" >
+  
 		<script>
 			jQuery.fn.center = function() {
 				this.css("position", "absolute");
