--- a/templates/theme/webui/base.html
+++ b/templates/theme/webui/base.html
@@ -35,7 +35,7 @@
 				this.css("left", ($(window).width() -   this.width()) / 2 + $(window).scrollLeft() + "px");
 				return this;
 			}
-			jQuery.ajaxSetup({
+			/*jQuery.ajaxSetup({
 				beforeSend : function() {
 					$('#loading').show()
 				},
@@ -49,7 +49,7 @@
 				},
 				timeout: 15000
 			});
-
+*/
 			// implement JSON.stringify serialization
 			JSON.stringify = JSON.stringify ||
 			function(obj) {
